<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_add"
        android:title="@string/anyadir"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"/>
    <item android:id="@+id/action_del"
        android:title="@string/eliminar"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_delete"/>
    <item android:id="@+id/action_acercade"
        android:title="@string/acercade"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

</menu>