<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_cielo"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AnyadirTarea">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="181dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/management" />

    /////////////Spinners//////////////////////
    <Spinner
        android:id="@+id/spEstado"
        android:layout_width="267dp"
        android:layout_height="19dp"
        app:layout_constraintEnd_toEndOf="@+id/spCat"
        app:layout_constraintStart_toStartOf="@+id/spCat"
        app:layout_constraintTop_toTopOf="@+id/tvEstado" />

    <Spinner
        android:id="@+id/spCat"
        android:layout_width="267dp"
        android:layout_height="18dp"
        android:layout_marginStart="2dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/tvCat"
        app:layout_constraintTop_toTopOf="@+id/tvCat" />

    <Spinner
        android:id="@+id/spPrio"
        android:layout_width="267dp"
        android:layout_height="19dp"
        app:layout_constraintEnd_toEndOf="@+id/spCat"
        app:layout_constraintStart_toStartOf="@+id/spCat"
        app:layout_constraintTop_toTopOf="@+id/tvPrio" />

    /////////// Text Views ///////////

    <TextView
        android:id="@+id/tvCat"
        android:layout_width="93dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/cat"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvPrio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prio"
        app:layout_constraintStart_toStartOf="@+id/tvCat"
        app:layout_constraintTop_toBottomOf="@+id/tvCat" />

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/estado"
        app:layout_constraintStart_toStartOf="@+id/tvPrio"
        app:layout_constraintTop_toBottomOf="@+id/tvPrio" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/tvEstado"
        app:layout_constraintTop_toBottomOf="@+id/spEstado" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="380dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/spEstado"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>